--- a/intl.zh-CN/产品定价/规格与定价.md
+++ b/intl.zh-CN/产品定价/规格与定价.md
@@ -21,30 +21,15 @@ POLARDB支持以下两种付费方式：
 |[存储空间](#section_u9d_n9d_3jt)| **按小时付费**。
 
  |
-|[SQL洞察](#section_vjp_ovg_pg5)|开启后**按小时付费**。详情请参见[SQL洞察简介](../intl.zh-CN/POLARDB for MySQL用户指南/SQL洞察.md#)。|
 |数据备份|暂不收费。|
 
 ## 存储空间价格 {#section_u9d_n9d_3jt .section}
 
 存储空间采用Serverless方式，购买时无需选择容量，随着数据增长而在线自动扩容，只按实际数据量大小收费。您可以在集群的[详情页面](../intl.zh-CN/POLARDB for MySQL用户指南/集群管理/查看数据库集群.md#)查看已使用的数据量。
 
-|付费方式|中国大陆|中国香港|美国西部|雅加达|
-|----|----|----|----|---|
-|包月（美元/GB/月）|0.55|0.61|0.59|0.66|
-|按小时付费（美元/GB/小时）|0.00077|0.00085|0.00085|0.00085|
-
 **说明：** 
 
 -   每个集群规格都有对应的[最大存储容量](intl.zh-CN/产品定价/规格与定价.md#table_g1y_xjg_tdb)。如需提高存储容量上限，请[升级集群规格](../intl.zh-CN/POLARDB for MySQL用户指南/集群管理/变更配置.md)。
-
-当您的数据量较大时，推荐您购买存储包，可由规定的地域内的所有集群共享使用，详情请参见[使用存储包](../intl.zh-CN/POLARDB for MySQL用户指南/集群管理/使用存储包.md#)。
-
-## SQL洞察价格 {#section_vjp_ovg_pg5 .section}
-
-SQL洞察按照审计日志存储的容量收取费用。
-
--   中国大陆地域：0.0013美元/GB/小时，0.94美元/GB/月。
--   中国香港及海外地域：0.0019美元/GB/小时，1.37美元/GB/月。
 
 ## 数据备份价格 {#section_ryg_gsw_hmu .section}
 
@@ -94,255 +79,71 @@ POLARDB目前提供如下规格的节点供您选择。POLARDB的所有节点规
 
 **说明：** 2核4GB的集群为入门级，用于测试、体验和极小负载的场景，高负载的生产环境不建议使用。生产环境推荐使用8核32GB或以上规格的集群。
 
-|节点规格|雅加达|
-|:---|---|
-|polar.mysql.x2.medium| 74美元/月
+|节点规格|CPU和内存数|雅加达|
+|:---|-------|---|
+|polar.mysql.x2.medium| 2核
+
+ 4GB
+
+ | 74美元/月
 
  0.15美元/小时
 
  |
-|polar.mysql.x4.large| 271美元/月
+|polar.mysql.x4.large| 4核
+
+ 16GB
+
+ | 271美元/月
 
  0.57美元/小时
 
  |
-|polar.mysql.x4.xlarge| 542美元/月
+|polar.mysql.x4.xlarge| 8核
+
+ 32GB
+
+ | 542美元/月
 
  1.13美元/小时
 
  |
-|polar.mysql.x8.xlarge| 689美元/月
+|polar.mysql.x8.xlarge| 8核
+
+ 64GB
+
+ | 689美元/月
 
  1.44美元/小时
 
  |
-|polar.mysql.x8.2xlarge| 1378美元/月
+|polar.mysql.x8.2xlarge| 16核
+
+ 128GB
+
+ | 1378美元/月
 
  2.87美元/小时
 
  |
-|polar.mysql.x8.4xlarge| 2756美元/月
+|polar.mysql.x8.4xlarge| 32核
+
+ 256GB
+
+ | 2756美元/月
 
  5.74美元/小时
 
  |
-|polar.mysql.x8.12xlarge| 7577美元/月
+|polar.mysql.x8.12xlarge| 88核
+
+ 710GB
+
+ | 7577美元/月
 
  15.78美元/小时
 
  |
-
-|节点规格|CPU和内存数|最大存储容量|最大连接数|内网带宽|最大IOPS|I/O带宽|
-|:---|:------|:-----|:----|----|------|-----|
-|polar.pg.x4.medium| 2核
-
- 8GB
-
- |5TB|400|1Gbps|16,000|1Gbps|
-|polar.pg.x4.large| 4核
-
- 16GB
-
- |10TB|800|10Gbps|64,000|4Gbps|
-|polar.pg.x4.xlarge| 8核
-
- 32GB
-
- |10TB|1,600|10Gbps|128,000|8Gbps|
-|polar.pg.x8.xlarge| 8核
-
- 64GB
-
- |30TB|3,200|10Gbps|160,000|10Gbps|
-|polar.pg.x8.2xlarge| 16核
-
- 128GB
-
- |50TB|6,400|10Gbps|256,000|16Gbps|
-|polar.pg.x8.4xlarge| 32核
-
- 256GB
-
- |50TB|12,800|10Gbps|384,000|24Gbps|
-|polar.pg.x8.12xlarge| 88核
-
- 710GB
-
- |100TB|36,000|25Gbps|512,000|32Gbps|
-
-|规格|中国大陆|中国香港|美国西部|
-|--|----|----|----|
-|polar.pg.x4.medium| 795.6美元/年
-
- 78美元/月
-
- 0.163美元/小时
-
- | 1509.6美元/年
-
- 148美元/月
-
- 0.226美元/小时
-
- | 1224美元/年
-
- 120美元/月
-
- 0.202美元/小时
-
- |
-|polar.pg.x4.large| 1581美元/年
-
- 155美元/月
-
- 0.324美元/小时
-
- | 3009美元/年
-
- 295美元/月
-
- 0.533美元/小时
-
- | 2448美元/年
-
- 240美元/月
-
- 0.434美元/小时
-
- |
-|polar.pg.x4.xlarge| 3162美元/年
-
- 310美元/月
-
- 0.646美元/小时
-
- | 6007.8美元/年
-
- 589美元/月
-
- 1.064美元/小时
-
- | 4896美元/年
-
- 480美元/月
-
- 0.867美元/小时
-
- |
-|polar.pg.x8.xlarge| 5059.2美元/年
-
- 496美元/月
-
- 1.033美元/小时
-
- | 7578.6美元/年
-
- 743美元/月
-
- 1.342美元/小时
-
- | 6324美元/年
-
- 620美元/月
-
- 1.12美元/小时
-
- |
-|polar.pg.x8.2xlarge| 10108.2美元/年
-
- 991美元/月
-
- 2.065美元/小时
-
- | 15157.2美元/年
-
- 1486美元/月
-
- 2.684美元/小时
-
- | 12637.8美元/年
-
- 1239美元/月
-
- 2.237美元/小时
-
- |
-|polar.pg.x8.4xlarge| 20216.4美元/年
-
- 1982美元/月
-
- 4.128美元/小时
-
- | 30314.4美元/年
-
- 2972美元/月
-
- 5.367美元/小时
-
- | 25265.4美元/年
-
- 2477美元/月
-
- 4.472美元/小时
-
- |
-|polar.pg.x8.12xlarge| 55579.8美元/年
-
- 5449美元/月
-
- 11.352美元/小时
-
- | 83364.6美元/年
-
- 8173美元/月
-
- 14.757美元/小时
-
- | 69472.2美元/年
-
- 6811美元/月
-
- 12.297美元/小时
-
- |
-
-|节点规格|CPU和内存数|最大存储容量|最大连接数|内网带宽|最大IOPS|I/O带宽|
-|:---|:------|:-----|:----|----|------|-----|
-|polar.o.x4.medium| 2核
-
- 8GB
-
- |5TB|400|1Gbps|16,000|1Gbps|
-|polar.o.x4.large| 4核
-
- 16GB
-
- |10TB|800|10Gbps|64,000|4Gbps|
-|polar.o.x4.xlarge| 8核
-
- 32GB
-
- |10TB|1,600|10Gbps|128,000|8Gbps|
-|polar.o.x8.xlarge| 8核
-
- 64GB
-
- |30TB|3,200|10Gbps|160,000|10Gbps|
-|polar.o.x8.2xlarge| 16核
-
- 128GB
-
- |50TB|6,400|10Gbps|256,000|16Gbps|
-|polar.o.x8.4xlarge| 32核
-
- 256GB
-
- |50TB|12,800|10Gbps|384,000|24Gbps|
-|polar.o.x8.12xlarge| 88核
-
- 710GB
-
- |100TB|36,000|25Gbps|512,000|32Gbps|
 
 **说明：** 
 
@@ -350,18 +151,6 @@ POLARDB目前提供如下规格的节点供您选择。POLARDB的所有节点规
 -   **最大IOPS**为理论换算值。
 -   集群的最大连接数跟集群中的节点规格有关，增加节点数量并不能增加集群的连接数。
 -   如果您需要其他计算能力和存储容量（例如**100 TB**），请通过[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)联系售后服务。
-
-|规格|中国大陆|
-|包月价格|包年价格|按小时付费价格|
-|--|----|
-|----|----|-------|
-|polar.o.x4.medium|161美元|1642.2美元|0.336美元|
-|polar.o.x4.large|322美元|3284.4美元|0.672美元|
-|polar.o.x4.xlarge|644美元|6568.8美元|1.342美元|
-|polar.o.x8.xlarge|830美元|8466美元|1.729美元|
-|polar.o.x8.2xlarge|1660美元|16932美元|3.458美元|
-|polar.o.x8.4xlarge|3319美元|33853.8美元|6.914美元|
-|polar.o.x8.12xlarge|9126美元|93085.2美元|19.013美元|
 
 **说明：** 以上表格中的价格为单个节点的价格，一个POLARDB集群默认包含一个主节点和一个只读节点。
 
