--- a/intl.zh-CN/POLARDB for MySQL用户指南/读写分离.md
+++ b/intl.zh-CN/POLARDB for MySQL用户指南/读写分离.md
@@ -8,7 +8,7 @@ POLARDB for MySQL集群自带读写分离功能。应用程序只需连接一个
 
     在POLARDB的链路中间层做读写分离的同时，中间层会track各个节点已经apply了的redolog位点即LSN，同时每次更新时会记录此次更新的位点为Session LSN, 当有新请求到来时我们会比较Session LSN 和当前各个节点的LSN，仅将请求发往LSN \>= Session LSN的节点，从而保证了会话一致性；表面上看该方案可能导致主库压力大，但是因为POLARDB是物理复制，速度极快，在上述场景中，当更新完成后，返回客户端结果时复制就同步在进行，而当下一个读请求到来时主从极有可能已经完成，然后大多数应用场景都是读多写少，所以经验证在该机制下即保证了会话一致性，也保证了读写分离负载均衡的效果。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/76678/156654784134632_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/76678/156678974434632_zh-CN.png)
 
 -   **原生支持读写分离，提升性能** 
 
@@ -63,7 +63,7 @@ POLARDB for MySQL集群自带读写分离功能。应用程序只需连接一个
 ## 使用限制 {#section_e1j_d55_j2b .section}
 
 -   若执行了[Multi Statements](https://dev.mysql.com/doc/internals/en/multi-statement.html)或存储过程，当前连接的后续请求会全部路由到主节点，需断开当前连接并重新连接才能恢复读写分离。
--   集群地址在只读模式下，不支持set环境变量， 例如set @endtime=now\(\); select \* from tab where dt < @endtime， 可能导致查询无法获得正确的环境变量。
+-   集群地址在只读模式下，不支持set环境变量， 例如`set @endtime=now(); select * from tab where dt < @endtime`， 可能导致查询无法获得正确的环境变量。
 -   使用视图时无法保证会话一致性，例如`CREATE VIEW tab2 AS SELECT * FROM tab1; INSERT INTO tab1(key, value) (1, 1); SELECT * FROM tab2 where key=1;`可能会因为延迟而查不到结果。
 
 ## 申请或修改集群地址 {#section_ksd_h55_j2b .section}
@@ -78,7 +78,7 @@ POLARDB for MySQL集群自带读写分离功能。应用程序只需连接一个
 
 6.  单击**修改**，设置新的集群地址，并单击**提交**。
 
-    ![修改集群地址](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15443/156654784145064_zh-CN.png)
+    ![修改集群地址](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15443/156678974545064_zh-CN.png)
 
 
 ## FAQs {#section_hrr_m55_j2b .section}
