--- a/intl.zh-CN/产品定价/规格与定价.md
+++ b/intl.zh-CN/产品定价/规格与定价.md
@@ -27,8 +27,12 @@ POLARDB支持以下两种付费方式：
 
 存储空间采用Serverless方式，购买时无需选择容量，随着数据增长而在线自动扩容，只按实际数据量大小收费。您可以在集群的[详情页面](../intl.zh-CN/POLARDB for MySQL用户指南/集群管理/查看数据库集群.md#)查看已使用的数据量。
 
+-   中国大陆地域：0.00077美元/GB/小时。
+-   中国香港及海外地域：0.00085美元/GB/小时。
+
 **说明：** 
 
+-   存储空间容量按小时扣费，不支持包年包月。
 -   每个集群规格都有对应的[最大存储容量](intl.zh-CN/产品定价/规格与定价.md#table_g1y_xjg_tdb)。如需提高存储容量上限，请[升级集群规格](../intl.zh-CN/POLARDB for MySQL用户指南/集群管理/变更配置.md)。
 
 ## 数据备份价格 {#section_ryg_gsw_hmu .section}
@@ -79,67 +83,123 @@ POLARDB目前提供如下规格的节点供您选择。POLARDB的所有节点规
 
 **说明：** 2核4GB的集群为入门级，用于测试、体验和极小负载的场景，高负载的生产环境不建议使用。生产环境推荐使用8核32GB或以上规格的集群。
 
-|节点规格|CPU和内存数|雅加达|
-|:---|-------|---|
-|polar.mysql.x2.medium| 2核
+|节点规格|中国大陆|中国香港|新加坡|雅加达|
+|:---|----|----|---|---|
+|polar.mysql.x2.medium| 44美元/月
 
- 4GB
+ 0.091美元/小时
+
+ | 76美元/月
+
+ 0.117美元/小时
+
+ | 76美元/月
+
+ 0.16美元/小时
 
  | 74美元/月
 
  0.15美元/小时
 
  |
-|polar.mysql.x4.large| 4核
+|polar.mysql.x4.large| 155美元/月
 
- 16GB
+ 0.323美元/小时
+
+ | 295美元/月
+
+ 0.532美元/小时
+
+ | 295美元/月
+
+ 0.61美元/小时
 
  | 271美元/月
 
  0.57美元/小时
 
  |
-|polar.mysql.x4.xlarge| 8核
+|polar.mysql.x4.xlarge| 310美元/月
 
- 32GB
+ 0.646美元/小时
+
+ | 589美元/月
+
+ 1.063美元/小时
+
+ | 589美元/月
+
+ 1.23美元/小时
 
  | 542美元/月
 
  1.13美元/小时
 
  |
-|polar.mysql.x8.xlarge| 8核
+|polar.mysql.x8.xlarge| 496美元/月
 
- 64GB
+ 1.033美元/小时
+
+ | 743美元/月
+
+ 1.342美元/小时
+
+ | 743美元/月
+
+ 1.55美元/小时
 
  | 689美元/月
 
  1.44美元/小时
 
  |
-|polar.mysql.x8.2xlarge| 16核
+|polar.mysql.x8.2xlarge| 991美元/月
 
- 128GB
+ 2.064美元/小时
 
- | 1378美元/月
+ | 1,486美元/月
+
+ 2.684美元/小时
+
+ | 1,486美元/月
+
+ 3.10美元/小时
+
+ | 1,378美元/月
 
  2.87美元/小时
 
  |
-|polar.mysql.x8.4xlarge| 32核
+|polar.mysql.x8.4xlarge| 1,982美元/月
 
- 256GB
+ 4.128美元/小时
 
- | 2756美元/月
+ | 2,972美元/月
+
+ 5.367美元/小时
+
+ | 2,972美元/月
+
+ 6.19美元/小时
+
+ | 2,756美元/月
 
  5.74美元/小时
 
  |
-|polar.mysql.x8.12xlarge| 88核
+|polar.mysql.x8.12xlarge| 5,449美元/月
 
- 710GB
+ 11.351美元/小时
 
- | 7577美元/月
+ | 8,173美元/月
+
+ 14.756美元/小时
+
+ | 8,173美元/月
+
+ 17.03美元/小时
+
+ | 7,577美元/月
 
  15.78美元/小时
 
@@ -147,12 +207,11 @@ POLARDB目前提供如下规格的节点供您选择。POLARDB的所有节点规
 
 **说明：** 
 
+-   **以上表格中的价格为单个节点的价格，一个POLARDB集群默认包含一个主节点和一个只读节点。**
 -   您可以在创建集群时选择主节点的规格，只读节点将采用与主节点相同的规格。
 -   **最大IOPS**为理论换算值。
 -   集群的最大连接数跟集群中的节点规格有关，增加节点数量并不能增加集群的连接数。
 -   如果您需要其他计算能力和存储容量（例如**100 TB**），请通过[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)联系售后服务。
-
-**说明：** 以上表格中的价格为单个节点的价格，一个POLARDB集群默认包含一个主节点和一个只读节点。
 
 ## 常见问题 {#section_mxm_x1v_vfb .section}
 
