--- a/cn.zh-CN/产品定价/规格与定价.md
+++ b/cn.zh-CN/产品定价/规格与定价.md
@@ -205,6 +205,8 @@ POLARDB目前提供如下规格的节点供您选择。POLARDB的所有节点规
 
  |
 
+**说明：** 雅加达以外的地域即将发布，敬请关注。
+
 **说明：** 
 
 -   **以上表格中的价格为单个节点的价格，一个POLARDB集群默认包含一个主节点和一个只读节点。**
