--- a/intl.zh-CN/POLARDB for MySQL用户指南/计费管理/手动续费集群.md
+++ b/intl.zh-CN/POLARDB for MySQL用户指南/计费管理/手动续费集群.md
@@ -10,41 +10,23 @@
 2.  在左上角选择地域，即可显示您账号在该地域的所有集群。
 3.  找到目标集群，在右侧选择**...** \> **续费**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3030/15659404602102_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3030/15669858782102_zh-CN.png)
 
 4.  选择续费时长并勾选服务协议，单击**去支付**完成支付即可。
 
-## 方法二：续费管理控制台续费 {#section_hv5_e2c_tpw .section}
+## 方法二：续费管理控制台续费 {#section_ze4_yzq_xjo .section}
 
 1.  进入[POLARDB控制台](https://polardb.console.aliyun.com/)。
 2.  在控制台右上方，选择**费用** \> **续费管理**。
 
-    ![续费管理控制台](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3030/156594046048357_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3030/156698587856597_zh-CN.png)
 
-3.  在控制台左上角单击**体验新版**，切换到新版控制台。
+3.  在左侧导航栏选择**云数据库POLARDB**。
+4.  在手动续费页签中找到目标集群，在右侧单击**续费**。
 
-    ![切换新版](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3030/156594046048373_zh-CN.png)
+    **说明：** 如果目标集群在自动续费或到期不续费页签中，您可以单击**恢复手动续费**，在弹出的对话框中单击**确定**即可恢复为手动续费。
 
-4.  通过搜索过滤功能在手动续费页签中找到目标集群，您可以单个续费或批量续费：
-    -   **单个续费** 
-        1.  在目标集群右侧单击**续费**。
-
-![续费集群2](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3030/156594046048358_zh-CN.png)
-
-**说明：** 
-
--   示例为新版续费管理控制台操作步骤，如果您使用旧版控制台，需要在左侧导航栏中找到**云数据库POLARDB**，然后进行续费操作。
--   如果目标集群在自动续费或到期不续费页签中，您可以单击**恢复手动续费**，在弹出的对话框中单击**确定**即可恢复为手动续费。
-        2.  选择续费时长并勾选服务协议，单击**去支付**完成支付即可。
-    -   **批量续费** 
-        1.  勾选目标集群，单击下方**批量续费**。
-
-            ![批量续费](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3030/156594046048379_zh-CN.png)
-
-        2.  选择每个集群的**续费时长**，单击**去支付**完成支付即可。
-
-            ![批量续费修改](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3030/156594046048382_zh-CN.png)
-
+5.  选择续费时长并勾选服务协议，单击**去支付**完成支付即可。
 
 ## 自动续费 {#section_jaq_119_mim .section}
 
