--- a/intl.zh-CN/POLARDB for MySQL用户指南/计费管理/自动续费集群.md
+++ b/intl.zh-CN/POLARDB for MySQL用户指南/计费管理/自动续费集群.md
@@ -10,83 +10,55 @@
 -   若您在自动扣款日期前进行了手动续费，则系统将在下一次到期前进行自动续费。
 -   自动续费功能于次日生效。若您的集群将于次日到期，为避免业务中断，请手动进行续费，详细步骤请参见[手动续费集群](intl.zh-CN/POLARDB for MySQL用户指南/计费管理/手动续费集群.md#)。
 
-## 开通自动续费 {#section_grh_sjn_wdb .section}
-
-**在购买集群时开通续费**
+## 购买集群时开通续费 {#section_05j_6cb_1j9 .section}
 
 **说明：** 开通自动续费后，系统将根据您的**购买时长**为周期进行自动续费。例如，如果您购买了3个月的集群并勾选了自动续费，则每次自动续费时会缴纳3个月的费用。
 
 在创建新集群时时，可以勾选**自动续费**。
 
-![购买时开通](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/216851/156594094246767_zh-CN.png)
+![购买时开通](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/216851/156698591746767_zh-CN.png)
 
-**购买集群后开通自动续费**
+## 购买集群后开通自动续费 {#section_646_x4z_eov .section}
 
 **说明：** 开通自动续费后，系统将根据您选择的续费周期进行自动续费。例如，如果您选择了3个月的续费周期，则每次自动续费时会缴纳3个月的费用。
 
 1.  登录[POLARDB管理控制台](https://polardb.console.aliyun.com/)。
 2.  在控制台右上方，选择**费用** \> **续费管理**。
 
-    ![进入续费管理](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/216851/156594094246768_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3030/156698591756597_zh-CN.png)
 
-3.  在控制台左上角单击**体验新版**，切换到新版控制台。
+3.  在左侧导航栏选择**云数据库POLARDB**。
+4.  在手动续费或到期不续费页签中找到目标集群，在右侧单击**开通自动续费**。
+5.  在弹出的对话框中，选择**自动续费周期**，单击**开通自动续费**。
 
-    ![切换新版](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3030/156594094248373_zh-CN.png)
-
-4.  通过搜索过滤功能在手动续费或到期不续费页签中找到目标集群，您可以单个开通或批量开通：
-    -   **单个开通** 
-        1.  单击右侧**开通自动续费**。
-
-            ![购买后开通](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/216851/156594094246770_zh-CN.png)
-
-            **说明：** 示例为新版续费管理控制台操作步骤，如果您使用旧版控制台，需要在左侧导航栏中找到**云数据库POLARDB**，然后开通自动续费。
-
-        2.  在弹出的对话框中，选择**自动续费周期**，单击**开通自动续费**。
-
-            ![开通设置](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/216851/156594094246771_zh-CN.png)
-
-    -   **批量开通** 
-
-        勾选目标集群，单击下方**开通自动续费**。
-
-        ![批量开通](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/216851/156594094348385_zh-CN.png)
-
-    -   在弹出的对话框中，选择**自动续费周期**，单击**开通自动续费**。
-
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/216851/156594094348386_zh-CN.png)
+    ![开通设置](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/216851/156698591746771_zh-CN.png)
 
 
-## 修改自动续费周期 {#section_d2g_wcy_s2b .section}
+## 修改自动续费周期 {#section_la0_mn6_xtf .section}
 
 1.  登录[POLARDB管理控制台](https://polardb.console.aliyun.com/)。
 2.  在控制台右上方，选择**费用** \> **续费管理**。
 
-    ![进入续费管理](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/216851/156594094246768_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3030/156698591756597_zh-CN.png)
 
-3.  在控制台左上角单击**体验新版**，切换到新版控制台。
-4.  通过搜索过滤功能在自动续费页签中找到目标集群，单击右侧**修改自动续费**。
+3.  在左侧导航栏选择**云数据库POLARDB**。
+4.  在自动续费页签中找到目标集群，在右侧单击**开通自动续费**。
+5.  通过搜索过滤功能在自动续费页签中找到目标集群，单击右侧**修改自动续费**。
+6.  在弹出的对话框中，修改自动续费周期后，单击**确定**。
 
-    ![修改自动续费](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/216851/156594094346773_zh-CN.png)
-
-    **说明：** 示例为新版续费管理控制台操作步骤，如果您使用旧版控制台，需要在左侧导航栏中找到**云数据库POLARDB**，然后修改自动续费。
-
-5.  在弹出的对话框中，修改自动续费周期后，单击**确定**。
-
-## 关闭自动续费 {#section_nxd_hih_n1m .section}
+## 关闭自动续费 {#section_mr7_sbp_685 .section}
 
 1.  登录[POLARDB管理控制台](https://polardb.console.aliyun.com/)。
 2.  在控制台右上方，选择**费用** \> **续费管理**。
 
-    ![进入续费管理](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/216851/156594094246768_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3030/156698591756597_zh-CN.png)
 
-3.  在控制台左上角单击**体验新版**，切换到新版控制台。
-4.  通过搜索过滤功能在自动续费页签中找到目标集群，单击右侧**恢复手动续费**。
+3.  在左侧导航栏选择**云数据库POLARDB**。
+4.  在自动续费页签中找到目标集群，在右侧单击**修改自动续费**。
+5.  选择**取消自动续费**，单击**确定**。
 
-    ![关闭自动续费](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/216851/156594094348390_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/216851/156698591856629_zh-CN.png)
 
-    **说明：** 示例为新版续费管理控制台操作步骤，如果您使用旧版控制台，需要在左侧导航栏中找到**云数据库POLARDB**，然后关闭自动续费。
-
-5.  在弹出的对话框中，单击**确定**。
 
 ## 相关API {#section_0kw_zsf_7q4 .section}
 
