--- a/cn.zh-CN/最佳实践/互联网行业高弹性系统架构最佳实践.md
+++ b/cn.zh-CN/最佳实践/互联网行业高弹性系统架构最佳实践.md
@@ -20,7 +20,7 @@
     -   如何绑定SLB请参见文档[绑定SLB实例](https://help.aliyun.com/document_detail/121597.html)。
 -   已申请域名且已经完成域名备案。
     -   申请域名请参见[注册通用域名](https://help.aliyun.com/document_detail/54068.html)。
-    -   域名备案请参见[ICP备案快速入门](https://help.aliyun.com/document_detail/61819.html)
+    -   域名备案请参见[ICP备案快速入门](https://help.aliyun.com/document_detail/61819.html)。
 
 ## 应用场景 {#section_wti_d3k_ujt .section}
 
@@ -40,7 +40,7 @@
 
 本实践基于如下图所示的技术架构和主要流程。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156652252256719_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156706968556719_zh-CN.png)
 
 ## 方案优势 {#section_os5_2wn_msv .section}
 
@@ -136,12 +136,12 @@
         ?>
         ```
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156652252257034_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156706968657034_zh-CN.png)
 
     6.  按Esc，输入`:wq`保存并退出。
     7.  在浏览器输入`http://<ECS的弹性公网IP>/info.php`，PHP安装正确会看到下图的PHP信息。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156652252357035_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156706968657035_zh-CN.png)
 
 7.  在ECS上安装WordPress。 
     1.  创建WordPress安装目录。
@@ -195,7 +195,7 @@
         define( 'DB_HOST', 'pc-wz957jq**********.mysql.polardb.rds.aliyuncs.com' );
         ```
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156652252357041_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156706968657041_zh-CN.png)
 
         |参数|描述|示例|
         |--|--|--|
@@ -214,7 +214,7 @@
 
     8.  在浏览器输入`http://<ECS的弹性公网IP>`，在WordPress配置页面填写站点标题、用户名和密码等信息，如下图所示。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156652252357043_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156706968657043_zh-CN.png)
 
     9.  单击左下角**安装WordPress**，完成安装。
 8.  在WordPress上开通redis缓存支持。 
@@ -256,7 +256,7 @@
         define('WP_REDIS_PASSWORD', 'password');
         ```
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156652252357050_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156706968657050_zh-CN.png)
 
         |参数|描述|示例|
         |--|--|--|
@@ -274,39 +274,39 @@
 
     6.  在浏览器输入`http://<ECS的弹性公网IP>/wp-login.php`，登录WordPress管理页面。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156652252357052_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156706968657052_zh-CN.png)
 
     7.  在左侧导航点单击**插件** \> **已安装插件**
     8.  在插件页面，单击Redis Object Cache下的**启动**。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156652252457054_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156706968657054_zh-CN.png)
 
     9.  单击**Settings**，打开Redis Object Cache页面。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156652252457055_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156706968657055_zh-CN.png)
 
     10. 当**Status**显示**Connected**时，表示Redis数据库连接正常。您可以点击**Flush Cache**将缓存数据导入Redis数据库。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156652252457057_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156706968657057_zh-CN.png)
 
 9.  在WordPress管理页面左侧导航栏中单击**设置** \> **常规**，在**WordPress地址（URL）**和**站点地址（URL）**选项中输入您预先申请并备案的域名。 
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156652252457060_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156706968657060_zh-CN.png)
 
 10. 配置负载均衡。 
     1.  登录[负载均衡SLB控制台](https://slbnew.console.aliyun.com/slb/overview)。
     2.  在左侧导航栏单击**实例** \> **实例管理**
     3.  定位到目标SLB实例，单击右侧**点我开始配置**。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156652252557063_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156706968657063_zh-CN.png)
 
     4.  在负载均衡业务配置导航页面，选择**HTTP**协议，**监听端口**设置为**80**，开启**开启会话保持**功能，单击**下一步**。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156652252557065_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156706968757065_zh-CN.png)
 
     5.  单击**默认服务器组** \> **继续添加**，勾选之前创建的ECS实例，单击**下一步：配置权重和端口号**。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156652252557066_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156706968757066_zh-CN.png)
 
     6.  设置**端口号**为**80**，**权重**为**50**，单击**下一步**。
     7.  在配置健康检查页面，开启健康检查后单击**下一步**。
@@ -323,7 +323,7 @@
 13. 登录[弹性伸缩控制台](https://essnew.console.aliyun.com/#/ess/region/cn-shenzhen)，配置弹性伸缩。 
     1.  创建伸缩组。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156652252557078_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156706968757078_zh-CN.png)
 
         **说明：** 创建伸缩组具体配置请参见[创建伸缩组](https://help.aliyun.com/document_detail/25866.html#h2-url-1)。
 
@@ -334,25 +334,25 @@
     3.  在该伸缩组中加入ECS实例。
         1.  登录[弹性伸缩控制台](https://essnew.console.aliyun.com/#/ess/region/cn-shenzhen)，单击目标伸缩组后的**管理**。
 
-            ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156652252557086_zh-CN.png)
+            ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156706968757086_zh-CN.png)
 
         2.  单击**ECS实例列表** \> **手动添加** \> **添加已有实例**，将目标ECS实例移动到右侧后，单击**确定**。
 
-            ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156652252657087_zh-CN.png)
+            ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156706968757087_zh-CN.png)
 
     4.  创建伸缩规则。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156652252657090_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156706968757090_zh-CN.png)
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156652252657091_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156706968757091_zh-CN.png)
 
         **说明：** 创建伸缩规则具体配置请参见[创建伸缩规则](https://help.aliyun.com/document_detail/25893.html)。
 
     5.  创建伸缩任务。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156652252657095_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156706968757095_zh-CN.png)
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156652252757096_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1423126/156706968757096_zh-CN.png)
 
         **说明：** 创建伸缩任务具体配置请参见[执行伸缩规则](https://help.aliyun.com/document_detail/25900.html)。
 
