--- a/cn.zh-CN/POLARDB for Oracle开发指南/开发PL__SQL函数与存储过程/存储过程概述.md
+++ b/cn.zh-CN/POLARDB for Oracle开发指南/开发PL__SQL函数与存储过程/存储过程概述.md
@@ -6,7 +6,7 @@
 
 CREATE PROCEDURE 命令用于定义和命名要存储在数据库中的存储过程。
 
-```
+``` {#codeblock_up8_61n_78i}
 CREATE [ OR REPLACE ] PROCEDURE name [ (parameters) ] [ AUTHID { DEFINER | CURRENT_USER } ] { IS | AS }
 [ declarations ] BEGIN
 statements END [ name ];                
@@ -16,7 +16,7 @@ name 是存储过程的标识符， 如果定义了\[ OR REPLACE \] 并且在模
 
 下面是一个简单的存储过程，它不带有任何参数。
 
-```
+``` {#codeblock_1pn_db7_m11}
 CREATE OR REPLACE PROCEDURE simple_procedure
 IS
 BEGIN
@@ -39,11 +39,11 @@ name是存储过程的标识，parameters指的是实际参数的列表。
 **说明：** 
 
 -   如果存储过程没有实际参数传递， 那么运行该存储过程的时候不应该带有括号。
--   在PSQL或EDB\*Plus环境下执行EXEC命令时，调用存储过程的语法与上面所示的语法流程相同。
+-   在PSQL或POLARDB for Oracle环境下执行EXEC命令时，调用存储过程的语法与上面所示的语法流程相同。
 
 下面是一个从匿名代码块中调用存储过程的示例：
 
-```
+``` {#codeblock_06m_nr1_dgg}
 BEGIN
     simple_procedure;
 END;
