--- a/intl.zh-CN/POLARDB for MySQL用户指南/性能监控与报警.md
+++ b/intl.zh-CN/POLARDB for MySQL用户指南/性能监控与报警.md
@@ -11,15 +11,15 @@
 5.  根据您的需求，可以查看**集群**或**节点**的监控信息。详细说明请参见[监控项说明](#)。
     -   集群性能监控：单击**集群**，在右侧设置时间段后单击**确定**。
 
-        ![集群性能监控](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3031/156594455034680_zh-CN.png)
+        ![集群性能监控](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3031/156715931934680_zh-CN.png)
 
     -   节点性能监控：单击**节点**，在右侧选择节点并设置时间段后单击**确定**。
 
         **说明：** 节点页面下方单击**显示更多**，会显示更多监控项。
 
-        ![节点性能监控](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3031/156594455034681_zh-CN.png)
+        ![节点性能监控](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3031/156715931934681_zh-CN.png)
 
-        ![节点性能监控](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3031/156594455034796_zh-CN.png)
+        ![节点性能监控](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3031/156715931934796_zh-CN.png)
 
 
 ## 监控项说明 {#section_ab1_kij_u21 .section}
@@ -49,11 +49,11 @@
 
 ## 设置报警 {#section_ugr_15h_1gb .section}
 
-1.  进入[云监控控制台](https://cloudmonitor.console.aliyun.com)。
+1.  进入[云监控控制台](https://cms-intl.console.aliyun.com)。
 2.  在左侧导航栏中，选择**报警服务** \> **报警规则**。
 3.  在报警规则列表页面，单击**创建报警规则**，进入创建报警规则页面。
 
-    ![创建报警规则](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3031/156594455153821_zh-CN.png)
+    ![创建报警规则](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3031/156715931953821_zh-CN.png)
 
 4.  在产品下拉列表中，选择**云数据库POLARDB-MySQL（新版）**，选择资源范围，设置报警规则和通知方式后，单击**确认**即可。
 
