--- a/intl.zh-CN/产品定价/规格与定价.md
+++ b/intl.zh-CN/产品定价/规格与定价.md
@@ -83,8 +83,8 @@ POLARDB目前提供如下规格的节点供您选择。POLARDB的所有节点规
 
 **说明：** 2核4GB的集群为入门级，用于测试、体验和极小负载的场景，高负载的生产环境不建议使用。生产环境推荐使用8核32GB或以上规格的集群。
 
-|节点规格|中国大陆|中国香港|新加坡|雅加达|
-|:---|----|----|---|---|
+|节点规格|中国大陆|中国（香港）|新加坡|印度尼西亚（雅加达）|
+|:---|----|------|---|----------|
 |polar.mysql.x2.medium| 44美元/月
 
  0.091美元/小时
@@ -213,7 +213,7 @@ POLARDB目前提供如下规格的节点供您选择。POLARDB的所有节点规
 -   您可以在创建集群时选择主节点的规格，只读节点将采用与主节点相同的规格。
 -   **最大IOPS**为理论换算值。
 -   集群的最大连接数跟集群中的节点规格有关，增加节点数量并不能增加集群的连接数。
--   如果您需要其他计算能力和存储容量（例如**100 TB**），请通过[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)联系售后服务。
+-   如果您需要其他计算能力和存储容量（例如**100 TB**），请通过[提交工单](https://workorder-intl.console.aliyun.com/console.htm?spm=5176.2020520001.console-base-top.dwork-order-1.497b4bd3uHPH0W#/ticket/createIndex)联系售后服务。
 
 ## 常见问题 {#section_mxm_x1v_vfb .section}
 
