--- a/cn.zh-CN/POLARDB for Oracle开发指南/下载客户端和驱动.md
+++ b/cn.zh-CN/POLARDB for Oracle开发指南/下载客户端和驱动.md
@@ -2,9 +2,13 @@
 
 本文为您提供POLARDB for Oracle客户端和相关驱动的下载地址。
 
+除了通过POLARDB管理控制台登录数据库之外，您还可以在本页下载并安装客户端，使用客户端连接POLARDB for Oracle集群，详情请参见[连接数据库](cn.zh-CN/POLARDB for Oracle开发指南/连接数据库.md#)。
+
+您可以在本页下载并安装相应的驱动，以便您的应用程序能够访问POLARDB for Oracle集群。
+
 ## 客户端 {#section_kyw_8oc_pmk .section}
 
-下面客户端压缩包包含Windows和Linux平台，安装方法参见压缩包内Readme文档。
+下面客户端压缩包包含适用于Windows和Linux平台的客户端安装包，安装方法参见压缩包内Readme文档。
 
 [POLARDB-for-Oracle-client.zip](http://gosspublic.alicdn.com/doc/POLARDB-for-Oracle-client.zip)
 
