--- a/cn.zh-CN/产品定价/规格与定价.md
+++ b/cn.zh-CN/产品定价/规格与定价.md
@@ -8,8 +8,12 @@ POLARDB支持以下两种付费方式：
 
 -   **包年包月（也称为预付费）**： 在新建数据库集群时支付计算集群（一个主节点和一个只读节点）的费用，而存储空间会根据实际数据量按小时计费，并从账户中按小时扣除。
 
--   **按小时付费（也称为按量付费、后付费）**： 无需预先支付费用，计算集群和存储空间（根据实际数据量）均按小时计费，并从账户中按小时扣除。
+-   **按量付费（也称为按小时付费、后付费）**： 无需预先支付费用，计算集群和存储空间（根据实际数据量）均按小时计费，并从账户中按小时扣除。
 
+
+**说明：** 
+
+若您在合同期内退订包年包月的集群，需要交纳相应的手续费，详细规则请参见[退款规则](https://help.aliyun.com/knowledge_detail/37096.html)。
 
 ## 收费项 {#section_xzw_tfj_kgb .section}
 
@@ -17,23 +21,40 @@ POLARDB支持以下两种付费方式：
 
 |收费项|说明|
 |---|--|
-|[计算集群（主节点和只读节点）](#section_f4v_rpg_tdb)|**包年包月**或**按小时付费**。|
-|[存储空间](#section_u9d_n9d_3jt)| **按小时付费**。
+|[计算集群（主节点和只读节点）](#section_f4v_rpg_tdb)|**包年包月**或**按量付费**。|
+|[存储空间](#section_u9d_n9d_3jt)| -   **按量付费**。
+-   预付费购买**存储包**。详情请参见[使用存储包](../cn.zh-CN/POLARDB for MySQL用户指南/使用存储包.md#)。
 
  |
+|[SQL洞察](#section_vjp_ovg_pg5)|开启后**按量付费**。详情请参见[SQL洞察简介](../cn.zh-CN/POLARDB for MySQL用户指南/SQL洞察.md#)。|
 |数据备份|暂不收费。|
 
 ## 存储空间价格 {#section_u9d_n9d_3jt .section}
 
-存储空间采用Serverless方式，购买时无需选择容量，随着数据增长而在线自动扩容，只按实际数据量大小收费。您可以在集群的[详情页面](../intl.zh-CN/POLARDB for MySQL用户指南/集群管理/查看数据库集群.md#)查看已使用的数据量。
+**按量付费**
 
--   中国大陆地域：0.00077美元/GB/小时。
--   中国香港及海外地域：0.00085美元/GB/小时。
+存储空间采用Serverless方式，购买时无需选择容量，随着数据增长而在线自动扩容，只按实际数据量大小收费。您可以在集群的[详情页面](../cn.zh-CN/POLARDB for MySQL用户指南/集群管理/查看数据库集群.md#)查看已使用的数据量。
+
+-   中国大陆地域：0.00486元/GB/小时。
+-   中国香港及海外地域：0.00542元/GB/小时。
 
 **说明：** 
 
--   存储空间容量按小时扣费，不支持包年包月。
--   每个集群规格都有对应的[最大存储容量](intl.zh-CN/产品定价/规格与定价.md#table_g1y_xjg_tdb)。如需提高存储容量上限，请[升级集群规格](../intl.zh-CN/POLARDB for MySQL用户指南/集群管理/变更配置.md)。
+-   存储空间容量按量扣费，不支持包年包月。
+-   每个集群规格都有对应的[最大存储容量](cn.zh-CN/产品定价/规格与定价.md#table_g1y_xjg_tdb)。如需提高存储容量上限，请[升级集群规格](../cn.zh-CN/POLARDB for MySQL用户指南/集群管理/变更配置.md)。
+
+**包年包月**
+
+如果数据量较大，推荐您购买[存储包](../cn.zh-CN/POLARDB for MySQL用户指南/使用存储包.md#)，相比按量付费，包年包月的存储包有折扣，购买的容量越大，折扣力度就越大。您可以[点此购买存储包](https://common-buy.aliyun.com/?spm=a2c4g.11186623.2.16.57703d6e3905Rw&commodityCode=polardb_package#/buy)。
+
+## SQL洞察价格 {#section_vjp_ovg_pg5 .section}
+
+SQL洞察按照审计日志存储的容量收取费用。
+
+-   中国大陆地域：0.008元/GB/小时。
+-   中国香港及海外地域：0.0122元/GB/小时。
+
+**说明：** 审计日志的存储容量按量扣费，不支持包年包月。
 
 ## 数据备份价格 {#section_ryg_gsw_hmu .section}
 
@@ -42,6 +63,8 @@ POLARDB备份文件占用的存储空间暂不收费。
 ## 计算节点价格 {#section_f4v_rpg_tdb .section}
 
 POLARDB目前提供如下规格的节点供您选择。POLARDB的所有节点规格均为独享型节点。独享型节点是指该节点独占所分配到的CPU、内存、存储和I/O资源，而非与其他节点共享资源，因此性能更加稳定可靠。
+
+**说明：** POLARDB for MySQL 8.0公测中，[点此申请](https://page.aliyun.com/form/act951838896/index.htm)。
 
 |节点规格|CPU和内存数|最大存储容量|最大连接数|内网带宽|最大IOPS|I/O带宽|
 |:---|:------|:-----|:----|----|------|-----|
@@ -83,129 +106,379 @@ POLARDB目前提供如下规格的节点供您选择。POLARDB的所有节点规
 
 **说明：** 2核4GB的集群为入门级，用于测试、体验和极小负载的场景，高负载的生产环境不建议使用。生产环境推荐使用8核32GB或以上规格的集群。
 
-|节点规格|中国大陆|中国（香港）|新加坡|印度尼西亚（雅加达）|
-|:---|----|------|---|----------|
-|polar.mysql.x2.medium| 44美元/月
+|节点规格|中国大陆|中国（香港）|美国（硅谷）|新加坡|印度尼西亚（雅加达）|
+|:---|----|------|------|---|----------|
+|polar.mysql.x2.medium| 280元/月
 
- 0.091美元/小时
+ 0.59元/小时
 
- | 76美元/月
+ | 490元/月
 
- 0.117美元/小时
+ 0.75元/小时
 
- | 76美元/月
+ | 395元/月
 
- 0.16美元/小时
+ 0.83元/小时
 
- | 74美元/月
+ | 490元/月
 
- 0.15美元/小时
+ 1.02元/小时
 
- |
-|polar.mysql.x4.large| 155美元/月
+ | 475元/月
 
- 0.323美元/小时
-
- | 295美元/月
-
- 0.532美元/小时
-
- | 295美元/月
-
- 0.61美元/小时
-
- | 271美元/月
-
- 0.57美元/小时
+ 0.99元/小时
 
  |
-|polar.mysql.x4.xlarge| 310美元/月
+|polar.mysql.x4.large| 1000元/月
 
- 0.646美元/小时
+ 2.09元/小时
 
- | 589美元/月
+ | 1900元/月
 
- 1.063美元/小时
+ 3.44元/小时
 
- | 589美元/月
+ | 1550元/月
 
- 1.23美元/小时
+ 3.23元/小时
 
- | 542美元/月
+ | 1900元/月
 
- 1.13美元/小时
+ 3.96元/小时
 
- |
-|polar.mysql.x8.xlarge| 496美元/月
+ | 1750元/月
 
- 1.033美元/小时
-
- | 743美元/月
-
- 1.342美元/小时
-
- | 743美元/月
-
- 1.55美元/小时
-
- | 689美元/月
-
- 1.44美元/小时
+ 3.65元/小时
 
  |
-|polar.mysql.x8.2xlarge| 991美元/月
+|polar.mysql.x4.xlarge| 2000元/月
 
- 2.064美元/小时
+ 4.17元/小时
 
- | 1,486美元/月
+ | 3800元/月
 
- 2.684美元/小时
+ 6.87元/小时
 
- | 1,486美元/月
+ | 3100元/月
 
- 3.10美元/小时
+ 6.46元/小时
 
- | 1,378美元/月
+ | 3800元/月
 
- 2.87美元/小时
+ 7.92元/小时
 
- |
-|polar.mysql.x8.4xlarge| 1,982美元/月
+ | 3500元/月
 
- 4.128美元/小时
-
- | 2,972美元/月
-
- 5.367美元/小时
-
- | 2,972美元/月
-
- 6.19美元/小时
-
- | 2,756美元/月
-
- 5.74美元/小时
+ 7.29元/小时
 
  |
-|polar.mysql.x8.12xlarge| 5,449美元/月
+|polar.mysql.x8.xlarge| 3200元/月
 
- 11.351美元/小时
+ 6.67元/小时
 
- | 8,173美元/月
+ | 4800元/月
 
- 14.756美元/小时
+ 8.67元/小时
 
- | 8,173美元/月
+ | 4000元/月
 
- 17.03美元/小时
+ 8.34元/小时
 
- | 7,577美元/月
+ | 4800元/月
 
- 15.78美元/小时
+ 10.00元/小时
+
+ | 4450元/月
+
+ 9.27元/小时
+
+ |
+|polar.mysql.x8.2xlarge| 6400元/月
+
+ 13.34元/小时
+
+ | 9600元/月
+
+ 17.34元/小时
+
+ | 8000元/月
+
+ 16.67元/小时
+
+ | 9600元/月
+
+ 20.00元/小时
+
+ | 8900元/月
+
+ 18.54元/小时
+
+ |
+|polar.mysql.x8.4xlarge| 12800元/月
+
+ 26.67元/小时
+
+ | 19200元/月
+
+ 34.67元/小时
+
+ | 16000元/月
+
+ 33.34元/小时
+
+ | 19200元/月
+
+ 40.00元/小时
+
+ | 17800元/月
+
+ 37.08.00元/小时
+
+ |
+|polar.mysql.x8.12xlarge| 35200元/月
+
+ 73.34元/小时
+
+ | 52800元/月
+
+ 95.34元/小时
+
+ | 44000元/月
+
+ 91.67元/小时
+
+ | 52800元/月
+
+ 110.00元/小时
+
+ | 48950元/月
+
+ 101.98元/小时
 
  |
 
-**说明：** 雅加达以外的地域即将发布，敬请关注。
+|节点规格|CPU和内存数|最大存储容量|最大连接数|内网带宽|最大IOPS|I/O带宽|
+|:---|:------|:-----|:----|----|------|-----|
+|polar.pg.x4.medium| 2核
+
+ 8GB
+
+ |5TB|400|1Gbps|16,000|1Gbps|
+|polar.pg.x4.large| 4核
+
+ 16GB
+
+ |10TB|800|10Gbps|64,000|4Gbps|
+|polar.pg.x4.xlarge| 8核
+
+ 32GB
+
+ |10TB|1,600|10Gbps|128,000|8Gbps|
+|polar.pg.x8.xlarge| 8核
+
+ 64GB
+
+ |30TB|3,200|10Gbps|160,000|10Gbps|
+|polar.pg.x8.2xlarge| 16核
+
+ 128GB
+
+ |50TB|6,400|10Gbps|256,000|16Gbps|
+|polar.pg.x8.4xlarge| 32核
+
+ 256GB
+
+ |50TB|12,800|10Gbps|384,000|24Gbps|
+|polar.pg.x8.12xlarge| 88核
+
+ 710GB
+
+ |100TB|36,000|25Gbps|512,000|32Gbps|
+
+|规格|中国大陆|中国（香港）|美国（硅谷）|
+|--|----|------|------|
+|polar.pg.x4.medium| 5100元/年
+
+ 500元/月
+
+ 1.05元/小时
+
+ | 9690元/年
+
+ 950元/月
+
+ 1.46元/小时
+
+ | 7905元/年
+
+ 775元/月
+
+ 1.3元/小时
+
+ |
+|polar.pg.x4.large| 10200元/年
+
+ 1000元/月
+
+ 2.09元/小时
+
+ | 19380元/年
+
+ 1900元/月
+
+ 3.44元/小时
+
+ | 15810元/年
+
+ 1550元/月
+
+ 2.8元/小时
+
+ |
+|polar.pg.x4.xlarge| 20400元/年
+
+ 2000元/月
+
+ 4.17元/小时
+
+ | 38760元/年
+
+ 3800元/月
+
+ 6.87元/小时
+
+ | 31620元/年
+
+ 3100元/月
+
+ 5.6元/小时
+
+ |
+|polar.pg.x8.xlarge| 32640元/年
+
+ 3200元/月
+
+ 6.67元/小时
+
+ | 48960元/年
+
+ 4800元/月
+
+ 8.67元/小时
+
+ | 40800元/年
+
+ 4000元/月
+
+ 7.23元/小时
+
+ |
+|polar.pg.x8.2xlarge| 65280元/年
+
+ 6400元/月
+
+ 13.34元/小时
+
+ | 97920元/年
+
+ 9600元/月
+
+ 17.34元/小时
+
+ | 81600元/年
+
+ 8000元/月
+
+ 14.45元/小时
+
+ |
+|polar.pg.x8.4xlarge| 130560元/年
+
+ 12800元/月
+
+ 26.67元/小时
+
+ | 195840元/年
+
+ 19200元/月
+
+ 34.67元/小时
+
+ | 163200元/年
+
+ 16000元/月
+
+ 28.89元/小时
+
+ |
+|polar.pg.x8.12xlarge| 359040元/年
+
+ 35200元/月
+
+ 73.34元/小时
+
+ | 538560元/年
+
+ 52800元/月
+
+ 95.34元/小时
+
+ | 448800元/年
+
+ 44000元/月
+
+ 79.45元/小时
+
+ |
+
+|节点规格|CPU和内存数|最大存储容量|最大连接数|内网带宽|最大IOPS|I/O带宽|
+|:---|:------|:-----|:----|----|------|-----|
+|polar.o.x4.medium| 2核
+
+ 8GB
+
+ |5TB|400|1Gbps|16,000|1Gbps|
+|polar.o.x4.large| 4核
+
+ 16GB
+
+ |10TB|800|10Gbps|64,000|4Gbps|
+|polar.o.x4.xlarge| 8核
+
+ 32GB
+
+ |10TB|1,600|10Gbps|128,000|8Gbps|
+|polar.o.x8.xlarge| 8核
+
+ 64GB
+
+ |30TB|3,200|10Gbps|160,000|10Gbps|
+|polar.o.x8.2xlarge| 16核
+
+ 128GB
+
+ |50TB|6,400|10Gbps|256,000|16Gbps|
+|polar.o.x8.4xlarge| 32核
+
+ 256GB
+
+ |50TB|12,800|10Gbps|384,000|24Gbps|
+|polar.o.x8.12xlarge| 88核
+
+ 710GB
+
+ |100TB|36,000|25Gbps|512,000|32Gbps|
+
+|规格|中国大陆|
+|包月价格|包年价格|按小时付费价格|
+|--|----|
+|----|----|-------|
+|polar.o.x2.medium|1040元|10608元|2.17元|
+|polar.o.x4.large|2080元|21216元|4.34元|
+|polar.o.x4.xlarge|4160元|42432元|8.67元|
+|polar.o.x8.xlarge|5360元|54672元|11.17元|
+|polar.o.x8.2xlarge|10720元|109344元|22.34元|
+|polar.o.x8.4xlarge|21440元|218688元|44.67元|
+|polar.o.x8.12xlarge|58960元|601392元|122.84元|
 
 **说明：** 
 
@@ -213,7 +486,7 @@ POLARDB目前提供如下规格的节点供您选择。POLARDB的所有节点规
 -   您可以在创建集群时选择主节点的规格，只读节点将采用与主节点相同的规格。
 -   **最大IOPS**为理论换算值。
 -   集群的最大连接数跟集群中的节点规格有关，增加节点数量并不能增加集群的连接数。
--   如果您需要其他计算能力和存储容量（例如**100 TB**），请通过[提交工单](https://workorder-intl.console.aliyun.com/console.htm?spm=5176.2020520001.console-base-top.dwork-order-1.497b4bd3uHPH0W#/ticket/createIndex)联系售后服务。
+-   如果您需要其他计算能力和存储容量（例如**100 TB**），请通过[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)联系售后服务。
 
 ## 常见问题 {#section_mxm_x1v_vfb .section}
 
@@ -225,6 +498,6 @@ POLARDB目前提供如下规格的节点供您选择。POLARDB的所有节点规
 
     答：POLARDB采用计算与存储分离的架构，购买的只读节点是计算资源，因此存储容量不会增加。
 
-    存储空间采用Serverless方式，购买时无需选择容量，随着数据增长而在线自动扩容，只按实际数据量大小收费。每个集群规格都有对应的[最大存储容量](intl.zh-CN/产品定价/规格与定价.md#table_g1y_xjg_tdb)。如需提高存储容量上限，请[升级集群规格](../intl.zh-CN/POLARDB for MySQL用户指南/集群管理/变更配置.md)。
+    存储空间采用Serverless方式，购买时无需选择容量，随着数据增长而在线自动扩容，只按实际数据量大小收费。每个集群规格都有对应的[最大存储容量](cn.zh-CN/产品定价/规格与定价.md#table_g1y_xjg_tdb)。如需提高存储容量上限，请[升级集群规格](../cn.zh-CN/POLARDB for MySQL用户指南/集群管理/变更配置.md)。
 
 
