--- a/cn.zh-CN/产品简介/产品优势.md
+++ b/cn.zh-CN/产品简介/产品优势.md
@@ -2,7 +2,7 @@
 
 ## 简单易用 {#section_ipv_tvf_tdb .section}
 
-兼容MySQL、PostgreSQL、Oracle引擎。您已有的应用程序代码、驱动无需更改，即可运行于POLARDB。
+兼容MySQL引擎。您已有的应用程序代码、驱动无需更改，即可运行于POLARDB。
 
 ## 极致性能，降低成本 {#section_ryk_4qv_tdb .section}
 
