--- a/cn.zh-CN/产品简介/产品优势.md
+++ b/cn.zh-CN/产品简介/产品优势.md
@@ -1,5 +1,7 @@
 # 产品优势 {#concept_dpc_ytf_tdb .concept}
 
+本文介绍云数据库POLARDB的产品优势，帮助您更好地了解POLARDB。
+
 ## 简单易用 {#section_ipv_tvf_tdb .section}
 
 兼容MySQL引擎。您已有的应用程序代码、驱动无需更改，即可运行于POLARDB。
@@ -45,8 +47,8 @@
 
 ## 高可用和高可靠保障 {#section_lpv_tvf_tdb .section}
 
--   共享分布式存储的设计，彻底解决了Master-Slave异步复制所带来的备库数据非强一致的缺陷，使得整个数据库集群在应对任何单点故障时，可以保证数据0丢失。
--   采用Active-Active的高可用集群架构，可读写的主节点和只读节点之间进行Failover切换，与传统的Active-Standby相比，用同样成本带来了更好的系统访问性能。
+-   共享分布式存储的设计，彻底解决了主从（Master-Slave）异步复制所带来的备库数据非强一致的缺陷，使得整个数据库集群在应对任何单点故障时，可以保证数据0丢失。
+-   采用双主（Active-Active）的高可用集群架构，可读写的主节点和只读节点之间进行故障切换（Failover），与传统的主备（Active-Standby）相比，用同样成本带来了更好的系统访问性能。
 -   多可用区架构，在多个可用区内都有数据备份，为数据库提供容灾和备份。
 
 ## 数据安全可靠 {#section_mpv_tvf_tdb .section}
