--- a/intl.zh-CN/POLARDB for MySQL用户指南/概述.md
+++ b/intl.zh-CN/POLARDB for MySQL用户指南/概述.md
@@ -1,6 +1,6 @@
 # 概述 {#concept_f4z_knq_tdb .concept}
 
-POLARDB是阿里云自研的下一代关系型云数据库，兼容MySQL、PostgreSQL、Oracle引擎，存储容量最高可达100TB，单库最多可扩展到16个节点，适用于企业多样化的数据库应用场景。
+POLARDB是阿里云自研的下一代关系型云数据库，兼容MySQL引擎，存储容量最高可达100TB，单库最多可扩展到16个节点，适用于企业多样化的数据库应用场景。
 
 POLARDB采用存储和计算分离的架构，所有计算节点共享一份数据，提供分钟级的配置升降级、秒级的故障恢复、全局数据一致性和免费的数据备份容灾服务。POLARDB既融合了商业数据库稳定可靠、高性能、可扩展的特征，又具有开源云数据库简单开放、自我迭代的优势，例如POLARDB for MySQL性能最高可以提升至MySQL的6倍，而成本只有商用数据库的1/10。
 
