--- a/intl.zh-CN/产品定价/规格与定价.md
+++ b/intl.zh-CN/产品定价/规格与定价.md
@@ -1,14 +1,18 @@
 # 规格与定价 {#concept_zbj_4pg_tdb .concept}
 
-本文介绍POLARDB的定价及节点规格。
+本文为您介绍POLARDB的定价及规格，主要包括付费方式、收费项、存储空间价格、数据备份价格、计算节点价格等。
 
 ## 付费方式 {#section_d4v_rpg_tdb .section}
 
 POLARDB支持以下两种付费方式：
 
--   **包年包月（也称为预付费）**： 在新建数据库集群时支付计算集群（一个主节点和一个只读节点）的费用，而存储空间会根据实际数据量按小时计费，并从账户中按小时扣除。
+-   **包年包月（也称为预付费）** 
 
--   **按小时付费（也称为按量付费、后付费）**： 无需预先支付费用，计算集群和存储空间（根据实际数据量）均按小时计费，并从账户中按小时扣除。
+    在新建数据库集群时支付计算集群（一个主节点和一个只读节点）的费用，而存储空间会根据实际数据量按小时计费，并从账户中按小时扣除。
+
+-   **按量付费（也称为按小时付费、后付费）** 
+
+    无需预先支付费用，计算集群和存储空间（根据实际数据量）均按小时计费，并从账户中按小时扣除。
 
 
 ## 收费项 {#section_xzw_tfj_kgb .section}
@@ -18,22 +22,19 @@ POLARDB支持以下两种付费方式：
 |收费项|说明|
 |---|--|
 |[计算集群（主节点和只读节点）](#section_f4v_rpg_tdb)|**包年包月**或**按小时付费**。|
-|[存储空间](#section_u9d_n9d_3jt)| **按小时付费**。
-
- |
+|[存储空间](#section_u9d_n9d_3jt)|**按小时付费**。|
 |数据备份|暂不收费。|
 
 ## 存储空间价格 {#section_u9d_n9d_3jt .section}
+
+**按量付费**
 
 存储空间采用Serverless方式，购买时无需选择容量，随着数据增长而在线自动扩容，只按实际数据量大小收费。您可以在集群的[详情页面](../intl.zh-CN/POLARDB for MySQL用户指南/集群管理/查看数据库集群.md#)查看已使用的数据量。
 
 -   中国大陆地域：0.00077美元/GB/小时。
 -   中国香港及海外地域：0.00085美元/GB/小时。
 
-**说明：** 
-
--   存储空间容量按小时扣费，不支持包年包月。
--   每个集群规格都有对应的[最大存储容量](intl.zh-CN/产品定价/规格与定价.md#table_g1y_xjg_tdb)。如需提高存储容量上限，请[升级集群规格](../intl.zh-CN/POLARDB for MySQL用户指南/集群管理/变更配置.md)。
+**说明：** 每个集群规格都有对应的[最大存储容量](intl.zh-CN/产品定价/规格与定价.md#table_g1y_xjg_tdb)。如需提高存储容量上限，请[升级集群规格](../intl.zh-CN/POLARDB for MySQL用户指南/集群管理/变更配置.md)。
 
 ## 数据备份价格 {#section_ryg_gsw_hmu .section}
 
@@ -41,7 +42,7 @@ POLARDB备份文件占用的存储空间暂不收费。
 
 ## 计算节点价格 {#section_f4v_rpg_tdb .section}
 
-POLARDB目前提供如下规格的节点供您选择。POLARDB的所有节点规格均为独享型节点。独享型节点是指该节点独占所分配到的CPU、内存、存储和I/O资源，而非与其他节点共享资源，因此性能更加稳定可靠。
+POLARDB的所有节点规格均为独享型节点。独享型节点是指该节点独占所分配到的CPU、内存、存储和I/O资源，而非与其他节点共享资源，因此性能更加稳定可靠。POLARDB目前提供以下规格的节点供您选择。
 
 |节点规格|CPU和内存数|最大存储容量|最大连接数|内网带宽|最大IOPS|I/O带宽|
 |:---|:------|:-----|:----|----|------|-----|
@@ -83,8 +84,8 @@ POLARDB目前提供如下规格的节点供您选择。POLARDB的所有节点规
 
 **说明：** 2核4GB的集群为入门级，用于测试、体验和极小负载的场景，高负载的生产环境不建议使用。生产环境推荐使用8核32GB或以上规格的集群。
 
-|节点规格|中国大陆|中国（香港）|新加坡|印度尼西亚（雅加达）|
-|:---|----|------|---|----------|
+|节点规格|中国大陆|中国（香港）|美国（硅谷）|新加坡|印度尼西亚（雅加达）|
+|:---|----|------|------|---|----------|
 |polar.mysql.x2.medium| 44美元/月
 
  0.091美元/小时
@@ -92,6 +93,10 @@ POLARDB目前提供如下规格的节点供您选择。POLARDB的所有节点规
  | 76美元/月
 
  0.117美元/小时
+
+ | 62美元/月
+
+ 0.130美元/小时
 
  | 76美元/月
 
@@ -110,6 +115,10 @@ POLARDB目前提供如下规格的节点供您选择。POLARDB的所有节点规
 
  0.532美元/小时
 
+ | 240美元/月
+
+ 0.500美元/小时
+
  | 295美元/月
 
  0.61美元/小时
@@ -126,6 +135,10 @@ POLARDB目前提供如下规格的节点供您选择。POLARDB的所有节点规
  | 589美元/月
 
  1.063美元/小时
+
+ | 480美元/月
+
+ 1.000美元/小时
 
  | 589美元/月
 
@@ -144,6 +157,10 @@ POLARDB目前提供如下规格的节点供您选择。POLARDB的所有节点规
 
  1.342美元/小时
 
+ | 620美元/月
+
+ 1.290美元/小时
+
  | 743美元/月
 
  1.55美元/小时
@@ -160,6 +177,10 @@ POLARDB目前提供如下规格的节点供您选择。POLARDB的所有节点规
  | 1,486美元/月
 
  2.684美元/小时
+
+ | 1,239美元/月
+
+ 2.580美元/小时
 
  | 1,486美元/月
 
@@ -178,6 +199,10 @@ POLARDB目前提供如下规格的节点供您选择。POLARDB的所有节点规
 
  5.367美元/小时
 
+ | 2,477美元/月
+
+ 5.160美元/小时
+
  | 2,972美元/月
 
  6.19美元/小时
@@ -195,6 +220,10 @@ POLARDB目前提供如下规格的节点供您选择。POLARDB的所有节点规
 
  14.756美元/小时
 
+ | 6,811美元/月
+
+ 14.190美元/小时
+
  | 8,173美元/月
 
  17.03美元/小时
@@ -204,8 +233,6 @@ POLARDB目前提供如下规格的节点供您选择。POLARDB的所有节点规
  15.78美元/小时
 
  |
-
-**说明：** 雅加达以外的地域即将发布，敬请关注。
 
 **说明：** 
 
